--- a/day-04/Cargo.toml
+++ b/day-04/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "advent-of-code-2020-day-03"
+name = "advent-of-code-2020-day-04"
 version = "0.1.0"
 authors = ["Sebastian Ziebell <sebastian.ziebell@asquera.de>"]
 edition = "2018"
@@ -8,3 +8,4 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.36"
+itertools = "0.9.0"
