--- a/day-24/Cargo.toml
+++ b/day-24/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "day-23"
+name = "day-24"
 version = "0.1.0"
 authors = ["Sebastian Ziebell <sebastian.ziebell@gmail.com>"]
 edition = "2018"
@@ -7,4 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-peg = "0.6.3"
+anyhow = "1.0.36"
